# AegisCLI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
aegiscli/: cli.py
aegiscli/core/: flagger.py
aegiscli/core/helpers/: formatter.py
aegiscli/core/utils/: flagger.py  logger.py
aegiscli/tools/profiler/: profiler.py  whois.py
aegiscli/tools/profiler/submodules/: dns_module.py  web.py  whois.py
